2005-10-18  Andy Wingo  <wingo@pobox.com>

	* flumotion/common/Makefile.am (flumotion_PYTHON): Dist boot.py.

	* configure.ac: Make scripts executable from configure time.

	* bin/flumotion-launch.in: 
	* flumotion/launch/main.py: Something like gst-launch for
	components, as yet unfinished.

	* bin/flumotion-inspect.in:
	* flumotion/launch/inspect.py: New files implementing something
	like gst-inspect for components.

	* flumotion/manager/manager.py (Vishnu.__init__): Use
	ComponentRegistry.makeBundlerBasket() instead of rolling it
	ourselves.

	* flumotion/common/registry.py
	(ComponentRegistry.makeBundlerBasket): New method, takes a
	registry and returns a bundler basket populated by the bundles in
	the registry.

	* common/gendoc.py: Use flumotion.common.boot to init the right
	pygtk and gst-python.

	* flumotion/common/boot.py (init_gst): Better error.

	* flumotion/component/producers/firewire/firewire.py
	(createComponent): Conditionally create different pipeline for
	0.9. Re-enable volume effect for 0.8.

	* flumotion/component/consumers/httpstreamer/http.py
	(MultifdSinkStreamer.__init__): Pacify the pychecker.

2005-10-17  Andy Wingo  <wingo@pobox.com>

	* flumotion/component/converters/overlay/overlay.py
	(createComponent): Update for 0.9.

2005-10-13  Michael Smith <msmith@fluendo.com>

	* flumotion/component/consumers/httpstreamer/http.py:
	* flumotion/component/consumers/httpstreamer/resources.py:
	  Use burst_on_connect option from configuration, since we helpfully
	  allow setting it.
	  Fix logic for max fds.

2005-10-12  Andy Wingo  <wingo@pobox.com>

	* flumotion/component/feedcomponent09.py
	(FeedComponent.pipeline_stop): Whoops, fix C thinko dinko.

	* flumotion/component/producers/firewire/firewire.py
	(createComponent): Don't add volume for now. This is a fixme.

	* flumotion/component/producers/firewire/firewire.xml: Add bundle
	for firewire component.

	* flumotion/component/consumers/httpstreamer/resources.py