@@ -4,6 +4,8 @@
   
     <component type="jpeg-encoder">
       <source location="flumotion.component.encoders.jpeg.jpeg"/>
+      <eater name="default"/>
+      <feeder name="default"/>
       <properties>
         <property name="feed" type="string" multiple="yes"/>
         <property name="source" type="string" multiple="no"/>
