@@ -4,6 +4,8 @@
   
     <component type="mulaw-encoder">
       <source location="flumotion.component.encoders.mulaw.mulaw"/>
+      <eater name="default"/>
+      <feeder name="default"/>
       <properties>
         <property name="feed" type="string" multiple="yes" />
         <property name="source" type="string" multiple="no" />
