@@ -3,6 +3,8 @@
   
     <component type="ogg-muxer">
       <source location="flumotion.component.muxers.ogg"/>
+      <eater name="default"/>
+      <feeder name="default"/>
       <properties>
         <property name="feed" type="string" multiple="yes"/>
         <property name="source" type="string" multiple="yes"/>
@@ -11,6 +13,8 @@
   
     <component type="multipart-muxer">
       <source location="flumotion.component.muxers.multipart"/>
+      <feeder name="default"/>
+      <eater name="default"/>
       <properties>
         <property name="feed" type="string" multiple="yes"/>
         <property name="source" type="string" multiple="yes"/>
